# oclif

./: .gitignore  Cargo.toml  README.md
examples/: error.rs
oclif/: Cargo.toml  expanded.rs
oclif/examples/: clap.rs  clap_derive.rs  structopt.rs
oclif/src/: add.rs  hello.rs  main.rs  new.rs
oclif/src/hello/: dog.rs  mod.rs  user.rs
oclif_command/: Cargo.toml
oclif_command/src/: lib.rs
oclif_derive/: Cargo.toml
oclif_macro/: Cargo.toml
oclif_macro/src/: aliases.rs  arg.rs  hidden.rs  lib.rs  name.rs  subcommands.rs  usage.rs
oclif_macro/src/types/: ident_list.rs  lit_str_list.rs  meta_property.rs  mod.rs
oclif_macro/src/utils/: get_doc.rs  mod.rs
oclif_structopt/: Cargo.toml
oclif_structopt/src/: main.rs
src/: error.rs  lib.rs  term.rs
