[package]
name = "oclif"
version = "0.1.0"
description = "Rust Open CLI Framework (based on oclif.io)"
license = "MIT"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"

[dependencies]
console = "0.14.0"
once_cell = "1.7.0"
paste = "1.0.0"

[dev-dependencies]
clap = "3.0.0-beta.2"
thiserror = "1.0.24"

[workspace]
members = [
	".",
]
