[package]
name = "oclif_macro"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11.4"
quote = "0.6.13"
syn = { version = "0.15.39", features = ["full", "extra-traits"] }
proc-macro2 = "0.4.30"
