[package]
name = "oclif_macro"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
heck = "0.3.0"
